--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,4 @@
 [pytest]
-python_files = **/testing/*tests.py
+; python_files = **/testing/*tests.py
+python_files = **/testing/raffle_creation_tests.py
 DJANGO_SETTINGS_MODULE = project.settings
