refactored the code

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,5 @@
 [pytest]
 ; python_files = **/testing/*tests.py
-python_files = **/testing/raffle_creation_tests.py
+; python_files = **/testing/raffle_creations_tests.py
+python_files = **/testing/raffle_participation_tests.py
 DJANGO_SETTINGS_MODULE = project.settings
