--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,8 @@
 [pytest]
 ; python_files = **/testing/*tests.py
 ; python_files = **/testing/raffle_creation_tests.py
-python_files = **/testing/raffle_participation_tests.py
+; python_files = **/testing/raffle_participation_tests.py
 ; python_files = **/testing/raffle_retrieval_tests.py
+; python_files = **/testing/ticket_verification_tests.py
+python_files = **/testing/winner_drawing_tests.py
 DJANGO_SETTINGS_MODULE = project.settings
